fixed: brand section responsive

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="font-['Inter'] bg-[#F3F3F3]">
     <!-- Header Section Start-->
-    <header class="max-w-[1280px] mx-auto mt-3 md:mt-5 px-3">
+    <header class="max-w-[1280px] mx-auto px-5 md:px-3 mt-3 md:mt-5">
       <!-- Navbar Section Start-->
       <nav class="flex items-center justify-between">
         <div class="logo flex items-center">
@@ -169,11 +169,11 @@
     <!-- Header Section End -->
 
     <!-- Main section -->
-    <main class="max-w-[1280px] mx-auto my-24 px-3">
+    <main class="max-w-[1280px] mx-auto px-5 md:px-3 5my-24">
       <!-- Brand Section -->
       <section class="brand-section">
         <div
-          class="grid grid-cols-2 sm:grid-cols-3 place-items-center md:flex gap-8 justify-between grayscale"
+          class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-6 place-items-center gap-5 justify-between grayscale"
         >
           <img
             class="aspect-3/2 object-contain mix-blend-color-burn"
@@ -901,58 +901,63 @@
     <!-- Main section End-->
 
     <!-- Footer Section Start -->
-    <footer class="w-full bg-white py-[6.25rem] px-[10rem]">
+    <footer class="w-full bg-white py-14 px-8 lg:py-[6.25rem] lg:px-[10rem]">
       <div class="f-container flex flex-col items-center justify-center gap-4">
-        <div class="logo flex justify-center items-center">
-          <h1 class="text-[32px] font-semibold text-[#0F0E0E]">
+        <div class="logo">
+          <a
+            href="#"
+            class="text-2xl md:text-[32px] font-semibold text-[#0F0E0E] flex"
+          >
             <span class="text-[#FC6320]">e</span>Com
-          </h1>
-          <img src="./images/logo-icon.png" alt="" />
+            <img class="w-8" src="./images/logo-icon.png" alt="" />
+          </a>
         </div>
-        <p class="text-lg text-[#0F0E0EB2] font-medium text-center">
+        <p class="text-sm md:text-lg text-[#0F0E0EB2] font-medium text-center">
           Save big this Black Friday with unbeatable deals on tech, home
           essentials, <br />
           fashion, and more! Limited stock.
         </p>
-        <div class="w-full mx-auto border border-[#0F0E0E1A] my-4"></div>
+        <div
+          class="w-full md:w-[80%] mx-auto border border-[#0F0E0E1A] my-4"
+        ></div>
         <div class="flex justify-center">
-          <ul class="flex gap-6 items-center">
+          <ul class="flex gap-5 items-center">
             <li>
               <a
-                class="nav-item-links text-[16px] font-semibold text-[#0F0E0E99] hover:text-[#0F0E0E] hover:scale-125 transition-transform ease-in-out"
+                class="nav-item-links text-sm md:text-[16px] font-semibold text-[#0F0E0E99] hover:text-[#0F0E0E] transition-all ease-in-out"
                 href="#"
                 >Home</a
               >
             </li>
             <li>
               <a
-                class="nav-item-links text-[16px] font-semibold text-[#0F0E0E99] border border-transparent hover:text-[#0F0E0E] hover:scale-125 transition-transform ease-in-out"
+                class="nav-item-links text-sm md:text-[16px] font-semibold text-[#0F0E0E99] border border-transparent hover:text-[#0F0E0E] transition-all ease-in-out"
                 href="#"
                 >Shop</a
               >
             </li>
             <li>
               <a
-                class="nav-item-links text-[16px] font-semibold text-[#0F0E0E99] border border-transparent hover:text-[#0F0E0E] hover:scale-125 transition-transform ease-in-out"
+                class="nav-item-links text-sm md:text-[16px] font-semibold text-[#0F0E0E99] border border-transparent hover:text-[#0F0E0E] transition-all ease-in-out"
                 href="#"
                 >App Products</a
               >
             </li>
             <li>
               <a
-                class="nav-item-links text-[16px] font-semibold text-[#0F0E0E99] border border-transparent hover:text-[#0F0E0E] hover:scale-125 transition-transform ease-in-out"
+                class="nav-item-links text-sm md:text-[16px] font-semibold text-[#0F0E0E99] border border-transparent hover:text-[#0F0E0E] transition-all ease-in-out"
                 href="#"
                 >Contacts</a
               >
             </li>
           </ul>
         </div>
-        <div class="flex justify-center gap-6 mt-4">
-          <a href="#"> <img class="h-6" src="./images/FB.png" alt="" /></a>
+        <div class="flex justify-center gap-6 mt-3">
+          <a href="#"> <img class="h-5" src="./images/FB.png" alt="" /></a>
           <a href="#">
-            <img class="h-6" src="./images/instagram.png" alt=""
+            <img class="h-5" src="./images/instagram.png" alt=""
           /></a>
-          <a href="#"> <img class="h-6" src="./images/x.png" alt="" /></a>
+          <a href="#"> <img class="h-5" src="./images/x.png" alt="" /></a>
         </div>
       </div>
     </footer>
