fixed some issue

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <!-- Header Section End -->
 
     <!-- Main section -->
-    <main class="max-w-[1280px] mx-auto px-5 md:px-3 5my-24">
+    <main class="max-w-[1280px] mx-auto px-5 md:px-3 my-24">
       <!-- Brand Section -->
       <section class="brand-section">
         <div
